First draft on small screen. Chapters 0-6

--- a/index.html
+++ b/index.html
@@ -53,6 +53,54 @@
       <div class="topNav-ddMenu--container" id="sideMenu">
         <h3 class="topNav-ddMenu--header">Table of Contents</h3>
         <div class="topNav-ddMenu--allLinksContainer">
+          <!------------ ------------------- ------------>
+          <!------------ Maxa Millennial Chapters ------------>
+          <!------------ ------------------- ------------>
+          <div class="topNav-ddMenu--linkContainer" id="chapters">
+            <div class="topNav-ddMenu--link position-absolute">
+              Maxa Millennial Chapters
+            </div>
+            <div class="topNav-ddMenu--ddArrowContainer">
+              <div class="topNav-ddMenu--ddArrow" id="ddArrow-chapters">
+                &#9660;
+              </div>
+            </div>
+          </div>
+          <div
+            class="topNav-ddMenu--listContainer list-settings"
+            id="list-chapters"
+          >
+            <h2 class="list-header">Maxa Milennial Chapters</h2>
+            <a href="index.html" class="topNav-ddMenu--listLinkContainer">
+              <p class="topNav-ddMenu--categoryLink">Prologue</p>
+            </a>
+            <a href="chapter1.html" class="topNav-ddMenu--listLinkContainer">
+              <p class="topNav-ddMenu--categoryLink">1. A Terminal Diagnosis</p>
+            </a>
+            <a href="chapter2.html" class="topNav-ddMenu--listLinkContainer">
+              <p class="topNav-ddMenu--categoryLink">
+                2. Surviving the First Death
+              </p>
+            </a>
+            <a href="chapter3.html" class="topNav-ddMenu--listLinkContainer">
+              <p class="topNav-ddMenu--categoryLink">3. Ego Death</p>
+            </a>
+            <a href="chapter4.html" class="topNav-ddMenu--listLinkContainer">
+              <p class="topNav-ddMenu--categoryLink">
+                4. The Fight to Undermine
+              </p>
+            </a>
+            <a href="chapter5.html" class="topNav-ddMenu--listLinkContainer">
+              <p class="topNav-ddMenu--categoryLink">
+                5. My Brothers and Sisters
+              </p>
+            </a>
+            <a href="chapter6.html" class="topNav-ddMenu--listLinkContainer">
+              <p class="topNav-ddMenu--categoryLink">
+                6. A Journal Entry from the Last Man on Earth
+              </p>
+            </a>
+          </div>
           <!------------ ------------- ------------>
           <!------------ SHORT STORIES ------------>
           <!------------ ------------- ------------>
@@ -96,49 +144,6 @@
             </div>
           </div>
 
-          <!------------ ------------------- ------------>
-          <!------------ Maxa Millennial Chapters ------------>
-          <!------------ ------------------- ------------>
-          <div class="topNav-ddMenu--linkContainer" id="chapters">
-            <div class="topNav-ddMenu--link position-absolute">
-              Maxa Millennial Chapters
-            </div>
-            <div class="topNav-ddMenu--ddArrowContainer">
-              <div class="topNav-ddMenu--ddArrow" id="ddArrow-chapters">
-                &#9660;
-              </div>
-            </div>
-          </div>
-          <div
-            class="topNav-ddMenu--listContainer list-settings"
-            id="list-chapters"
-          >
-            <h2 class="list-header">Maxa Milennial Chapters</h2>
-            <a href="index.html" class="topNav-ddMenu--listLinkContainer">
-              <p class="topNav-ddMenu--categoryLink">Prologue</p>
-            </a>
-            <a href="chapter1.html" class="topNav-ddMenu--listLinkContainer">
-              <p class="topNav-ddMenu--categoryLink">1. A Terminal Diagnosis</p>
-            </a>
-            <a href="chapter2.html" class="topNav-ddMenu--listLinkContainer">
-              <p class="topNav-ddMenu--categoryLink">
-                2. Surviving the First Death
-              </p>
-            </a>
-            <a href="chapter3.html" class="topNav-ddMenu--listLinkContainer">
-              <p class="topNav-ddMenu--categoryLink">3. Ego Death</p>
-            </a>
-            <a href="#" class="topNav-ddMenu--listLinkContainer">
-              <p class="topNav-ddMenu--categoryLink">
-                4. A Journal Entry from the Last Man on Earth
-              </p>
-            </a>
-            <a href="#" class="topNav-ddMenu--listLinkContainer">
-              <p class="topNav-ddMenu--categoryLink">
-                5. The Fight to Undermine
-              </p>
-            </a>
-          </div>
           <!------------ ------------------- ------------>
           <!------------ LONGFORM NONFICTION ------------>
           <!------------ ------------------- ------------>
