Updated navbar for mobile and desktop, adjusted image displays, added adhoc scroll event fix.

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div class="topNav-link">Panagram</div>
       </div>
       <!------------ SLIDE-IN MENU ------------>
-      <div class="topNav-ddMenu--container" id="sideMenu">
+      <div class="topNav-ddMenu--container pointerEvents-none" id="sideMenu">
         <h3 class="topNav-ddMenu--header">Table of Contents</h3>
         <div class="topNav-ddMenu--allLinksContainer">
           <!------------ ------------------- ------------>
@@ -116,7 +116,7 @@
             class="topNav-ddMenu--listContainer list-settings"
             id="list-shortStories"
           >
-            <h2 class="list-header">Fiction</h2>
+            <h2 class="list-header">Fiction - coming soon</h2>
             <div class="topNav-ddMenu--listLinkContainer">
               <div class="topNav-ddMenu--categoryLink">
                 1. Mirror In the Mirror
@@ -161,7 +161,7 @@
             class="topNav-ddMenu--listContainer list-settings"
             id="list-nonfiction-long"
           >
-            <h2 class="list-header">Longform Non-fiction</h2>
+            <h2 class="list-header">Longform Non-fiction - coming soon</h2>
             <div class="topNav-ddMenu--listLinkContainer">
               <div class="topNav-ddMenu--categoryLink">
                 1. An Essay Concerning You
@@ -223,7 +223,7 @@
             class="topNav-ddMenu--listContainer list-settings"
             id="list-aphorisms"
           >
-            <h2 class="list-header">Aphorisms</h2>
+            <h2 class="list-header">Aphorisms - coming soon</h2>
             <div class="topNav-ddMenu--listLinkContainer">
               <div class="topNav-ddMenu--categoryLink">
                 1. A Drop In the Ocean
@@ -278,7 +278,7 @@
                 14. Surveying My Soulscape
               </div>
             </div>
-            <div class="topNav-ddMenu--listLinkContainer">
+            <!-- <div class="topNav-ddMenu--listLinkContainer">
               <div class="topNav-ddMenu--categoryLink">15. The Absurd</div>
             </div>
             <div class="topNav-ddMenu--listLinkContainer">
@@ -293,7 +293,7 @@
               <div class="topNav-ddMenu--categoryLink">
                 18. You Look So Different
               </div>
-            </div>
+            </div> -->
           </div>
 
           <!------------ -------------------- ------------>
@@ -311,7 +311,7 @@
             class="topNav-ddMenu--listContainer list-settings"
             id="list-nonfiction-short"
           >
-            <h2 class="list-header">Shortform Non-fiction</h2>
+            <h2 class="list-header">Shortform Non-fiction - coming soon</h2>
             <div class="topNav-ddMenu--listLinkContainer">
               <div class="topNav-ddMenu--categoryLink">
                 1. The Reasons I Can't Find
@@ -414,7 +414,7 @@
             class="topNav-ddMenu--listContainer list-settings"
             id="list-articles"
           >
-            <h2 class="list-header">Panagram Articles</h2>
+            <h2 class="list-header">Panagram Articles - coming soon</h2>
             <div class="topNav-ddMenu--listLinkContainer">
               <div class="topNav-ddMenu--categoryLink">
                 1. How Does a Panagram Start?
@@ -477,7 +477,7 @@
             class="topNav-ddMenu--listContainer list-settings"
             id="list-poetry"
           >
-            <h2 class="list-header">Poetry</h2>
+            <h2 class="list-header">Poetry - coming soon</h2>
             <div class="topNav-ddMenu--listLinkContainer">
               <div class="topNav-ddMenu--categoryLink">
                 1. So Soon I'll Retire
@@ -532,11 +532,11 @@
             <div class="topNav-ddMenu--listLinkContainer">
               <div class="topNav-ddMenu--categoryLink">14. Whisking Away</div>
             </div>
-            <div class="topNav-ddMenu--listLinkContainer">
+            <!-- <div class="topNav-ddMenu--listLinkContainer">
               <div class="topNav-ddMenu--categoryLink">
                 15. Who Turned Out the Lights
               </div>
-            </div>
+            </div> -->
           </div>
         </div>
         <div class="topNav-ddMenu--btnContainer">
@@ -551,12 +551,15 @@
       <div class="chapter-landing chapter-landing--prologue">
         <div class="title title-landing title-landing--prologue">
           <h1 class="title-chapterNumber">Prologue:</h1>
-          <h1 class="title-chapterTitle">A Meeting</h1>
+          <h1 class="title-chapterTitle title-chapterTitle--prologue">
+            A Meeting
+          </h1>
           <span class="title-authorName">By Maxa Millennial</span>
           <button class="title-btn">Read Now</button>
         </div>
       </div>
       <div class="chapter-content">
+        <div id="scrollAdhoc"></div>
         <div class="title title-content">
           <h2 class="title-chapterTitle">A Meeting</h2>
           <span class="title-authorName">By Maxa Millennial</span>
