Second round of mobile touches 1

--- a/index.html
+++ b/index.html
@@ -550,12 +550,16 @@
     <section class="chapter">
       <div class="chapter-landing chapter-landing--prologue">
         <div class="title title-landing title-landing--prologue">
-          <h1 class="title-chapterNumber">Prologue:</h1>
-          <h1 class="title-chapterTitle title-chapterTitle--prologue">
-            A Meeting
-          </h1>
-          <span class="title-authorName">By Maxa Millennial</span>
-          <button class="title-btn">Read Now</button>
+          <div class="prologue-mobile">
+            <h1 class="title-chapterNumber">Prologue:</h1>
+            <h1 class="title-chapterTitle title-chapterTitle--prologue">
+              A Meeting
+            </h1>
+          </div>
+          <div class="prologue-mobile2">
+            <span class="title-authorName">By Maxa Millennial</span>
+            <button class="title-btn">Read Now</button>
+          </div>
         </div>
       </div>
       <div class="chapter-content">
