Second round of mobile touches 11

--- a/index.html
+++ b/index.html
@@ -561,7 +561,7 @@
       <div class="chapter-content">
         <div id="scrollAdhoc"></div>
         <div class="title title-content">
-          <h2 class="title-chapterTitle">A Meeting</h2>
+          <h2 class="title-chapterTitle text-align-center">A Meeting</h2>
           <span class="title-authorName">By Maxa Millennial</span>
         </div>
         <div class="chapter-text">
