--- a/pages/index.html
+++ b/pages/index.html
@@ -11,7 +11,8 @@
 {% block content %}
 
 <!-- Partial 1 NJK-->
-{% include "partials/topNav.html" %}
+{% include "partials/nav.html" %}
+<!--! Should be partials/nav.html -->
 
 <!-- Partial 2 NJK-->
 {% include "partials/index.html" %}
