--- a/pages/index.html
+++ b/pages/index.html
@@ -5,7 +5,7 @@
 {% extends "layout.html" %}
 
 <!-- Block Title -->
-{% block title %} {{head.title()}} {% endblock %}
+{% block title %} {{head.title('Table of Contents')}} {% endblock %}
 
 <!-- Block Content -->
 {% block content %}
@@ -14,7 +14,7 @@
 {% include "partials/nav.html" %}
 
 <!-- Partial 2 NJK-->
-{% include "partials/index.html" %}
+{% include "partials/toc.html" %}
 
 <!-- Endblock -->
 {% endblock %}
