Fixed large screen, fixed toc chapter links

--- a/index.html
+++ b/index.html
@@ -482,32 +482,32 @@
   <div class="pieceLink-afterLine" id="c1-line">
     <div class="pieceLink-afterLine--movingBlock"></div>
   </div>
-  <a href="c2.html" class="pieceLink pieceLink-chapter" id="c2">
+  <a href="chapter2.html" class="pieceLink pieceLink-chapter" id="c2">
     Chapter 2: Surviving the First Death
   </a>
   <div class="pieceLink-afterLine" id="c2-line">
     <div class="pieceLink-afterLine--movingBlock"></div>
   </div>
-  <a href="c3.html" class="pieceLink pieceLink-chapter" id="c3">
+  <a href="chapter3.html" class="pieceLink pieceLink-chapter" id="c3">
     Chapter 3: Ego Death
   </a>
   <div class="pieceLink-afterLine" id="c3-line">
     <div class="pieceLink-afterLine--movingBlock"></div>
   </div>
-  <a href="c4.html" class="pieceLink pieceLink-chapter" id="c4">
+  <a href="chapter4.html" class="pieceLink pieceLink-chapter" id="c4">
     Chapter 4: The Fight to Undermine
   </a>
   <div class="pieceLink-afterLine" id="c4-line">
     <div class="pieceLink-afterLine--movingBlock"></div>
   </div>
-  <a href="c5.html" class="pieceLink pieceLink-chapter" id="c5">
+  <a href="chapter5.html" class="pieceLink pieceLink-chapter" id="c5">
     Chapter 5: My Brothers and Sisters
   </a>
   <div class="pieceLink-afterLine" id="c5-line">
     <div class="pieceLink-afterLine--movingBlock"></div>
   </div>
 
-  <a href="c6.html" class="pieceLink pieceLink-chapter" id="c6">
+  <a href="chapter6.html" class="pieceLink pieceLink-chapter" id="c6">
     Chapter 6: A Journal Entry from the Last Man on Earth
   </a>
 </div>
