Added toc links for nonfiction longform

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
     <p class="subNav-link--text">5. Kings So Conquered</p>
   </a>
   <a href="#" class="subNav-link">
-    <p class="subNav-link--text">6. An Existential Critique of Capiatlism</p>
+    <p class="subNav-link--text">6. An Existential Critique of Capitalism</p>
   </a>
   <a href="#" class="subNav-link">
     <p class="subNav-link--text">7. Assumptive Critiques</p>
@@ -448,8 +448,8 @@
     </div>
   </div>
 
-  <!--! FICTION -->
   <div class="toc-pieceLinks">
+    <!--! FICTION -->
     <!--! FICTION -->
 <div class="toc-pieceLinks--fiction" id="toc-fictionDisplay">
   <a href="#" class="pieceLink pieceLink-fiction" id="f1">
@@ -511,6 +511,69 @@
     Chapter 6: A Journal Entry from the Last Man on Earth
   </a>
 </div>
+
+    <!--! Nonfiction LF -->
+    <!--! Longform Nonfiction -->
+<div class="toc-pieceLinks--LF" id="toc-LFDisplay">
+  <div class="toc-set1--LF">
+    <h3 class="header-LF">The Essays</h3>
+    <a href="#" class="pieceLink pieceLink-LF" id="lf1">
+      An Essay Concerning You
+    </a>
+    <a href="#" class="pieceLink pieceLink-LF" id="lf2">
+      A Theory of Acknowledgement
+    </a>
+    <a href="#" class="pieceLink pieceLink-LF" id="lf3">
+      An Existential Critique of Capitalism
+    </a>
+    <a href="#" class="pieceLink pieceLink-LF" id="lf4">Assumptive Critiques</a>
+  </div>
+  <div class="toc-set2--LF">
+    <h3 class="header-LF">The Witness</h3>
+    <a href="#" class="pieceLink pieceLink-LF" id="lf5">
+      An Addict, a Thief, and a Catalogger
+    </a>
+    <a href="#" class="pieceLink pieceLink-LF" id="lf6">
+      A Stranger's Stranger
+    </a>
+    <a href="#" class="pieceLink pieceLink-LF" id="lf7">Kings So Conquered</a>
+    <a href="#" class="pieceLink pieceLink-LF" id="lf8">The Sonderer</a>
+    <a href="#" class="pieceLink pieceLink-LF" id="lf9">The Watchers</a>
+    <a href="#" class="pieceLink pieceLink-LF" id="lf10">Severed</a>
+  </div>
+</div>
+
+    <!--! Nonfiction SF -->
+    <!--! Shortform Nonfiction -->
+<div class="toc-pieceLinks--SF" id="toc-SFDisplay">
+  <a href="#" class="pieceLink pieceLink-SF" id="sf1">
+    The Reasons I Can't Find
+  </a>
+  <a href="#" class="pieceLink pieceLink-SF" id="sf2">
+    Demolition Derby: HOUSE FOR SALE
+  </a>
+  <a href="#" class="pieceLink pieceLink-SF" id="sf3">Growing Pains</a>
+  <a href="#" class="pieceLink pieceLink-SF" id="sf4">Finding Zen</a>
+  <a href="#" class="pieceLink pieceLink-SF" id="sf5">Into the Gray</a>
+  <a href="#" class="pieceLink pieceLink-SF" id="sf5">My Existential Romance</a>
+  <a href="#" class="pieceLink pieceLink-SF" id="sf6">
+    The Feeling of a Soft Mind
+  </a>
+  <a href="#" class="pieceLink pieceLink-SF" id="sf7">The Outside Witness</a>
+  <a href="#" class="pieceLink pieceLink-SF" id="sf8">End Days</a>
+  <a href="#" class="pieceLink pieceLink-SF" id="sf9">The Midwestern Root</a>
+  <a href="#" class="pieceLink pieceLink-SF" id="sf10">Moments In-Between</a>
+  <a href="#" class="pieceLink pieceLink-SF" id="sf11">Switched</a>
+  <a href="#" class="pieceLink pieceLink-SF" id="sf12">And, Today</a>
+</div>
+
+    <!--! Aphorisms  -->
+    <!--! Aphorisms -->
+<div class="toc-pieceLinks--aphorisms" id="toc-aphorismsDisplay"></div>
+
+    <!--! Poetry -->
+    <!--!  Poetry  -->
+<div class="toc-pieceLinks--poetry" id="toc-poetryDisplay"></div>
 
   </div>
 </section>
