--- a/index.html
+++ b/index.html
@@ -644,11 +644,114 @@
 
     <!--! Aphorisms  -->
     <!--! Aphorisms -->
-<div class="toc-pieceLinks--aphorisms" id="toc-aphorismsDisplay"></div>
+<div class="toc-pieceLinks--aphorisms" id="toc-aphorismsDisplay">
+  <div class="toc-miniContainer">
+    <div class="miniContainer-header">Aphorism List</div>
+    <div class="pieceLink pieceLink-aphorism" id="a1">A Drop In the Ocean</div>
+    <div class="pieceLink pieceLink-aphorism" id="a2">Age Old Wisdom</div>
+    <div class="pieceLink pieceLink-aphorism" id="a3">Charity Work</div>
+    <div class="pieceLink pieceLink-aphorism" id="a4">CREATE</div>
+    <div class="pieceLink pieceLink-aphorism" id="a5">City - Part 1</div>
+    <div class="pieceLink pieceLink-aphorism" id="a6">City - Part 2</div>
+    <div class="pieceLink pieceLink-aphorism" id="a6">Epilogue</div>
+    <div class="pieceLink pieceLink-aphorism" id="a7">Existential Dread</div>
+    <div class="pieceLink pieceLink-aphorism" id="a8">Heidegger's Dashes</div>
+    <div class="pieceLink pieceLink-aphorism" id="a9">I am a Fraud</div>
+    <div class="pieceLink pieceLink-aphorism" id="a10">Impact</div>
+    <div class="pieceLink pieceLink-aphorism" id="a11">Lost in My Head</div>
+    <div class="pieceLink pieceLink-aphorism" id="a12">
+      Maxa Millennial Creating
+    </div>
+    <div class="pieceLink pieceLink-aphorism" id="a13">
+      Maxa the Overcreator
+    </div>
+    <div class="pieceLink pieceLink-aphorism" id="a14">MaxaMillennial.org</div>
+    <div class="pieceLink pieceLink-aphorism" id="a15">Moments of Validity</div>
+    <div class="pieceLink pieceLink-aphorism" id="a16">My-being Mask</div>
+    <div class="pieceLink pieceLink-aphorism" id="a17">
+      Pillars of Consciousness
+    </div>
+    <div class="pieceLink pieceLink-aphorism" id="a18">Real-world Friends</div>
+    <div class="pieceLink pieceLink-aphorism" id="a19">
+      Surveying My Soulscape
+    </div>
+    <div class="pieceLink pieceLink-aphorism" id="a20">The Absurd</div>
+    <div class="pieceLink pieceLink-aphorism" id="a21">The After-life</div>
+    <div class="pieceLink pieceLink-aphorism" id="a22">
+      The Backhanded Jaywalk
+    </div>
+    <div class="pieceLink pieceLink-aphorism" id="a23">
+      You Look So Different
+    </div>
+  </div>
+  <div class="toc-pieceDisplay">
+    <h4 class="pieceDisplay-header">Charity Work</h4>
+    <p class="pieceDisplay-text">
+      I will never donate anonymously. Never ever. I'll donate everything I own
+      but never anonymously.
+    </p>
+    <a href="#" class="pieceDisplay-link">Go to Page</a>
+    <div class="pieceDisplay-btn">Random Aphorism</div>
+  </div>
+</div>
 
     <!--! Poetry -->
-    <!--!  Poetry  -->
-<div class="toc-pieceLinks--poetry" id="toc-poetryDisplay"></div>
+    <!--! Poetry -->
+<div class="toc-pieceLinks--poetry" id="toc-poetryDisplay">
+  <div class="toc-miniContainer2">
+    <div class="miniContainer-header">Poem List</div>
+    <div class="toc-miniContainer">
+      <div class="pieceLink pieceLink-poetry" id="p1">5:21</div>
+      <div class="pieceLink pieceLink-poetry" id="p2">A Drug for Humans</div>
+      <div class="pieceLink pieceLink-poetry" id="p3">DOCTYPE! Soulscape</div>
+      <div class="pieceLink pieceLink-poetry" id="p4">
+        How Can He Deny My Premises
+      </div>
+      <div class="pieceLink pieceLink-poetry" id="p5">Hunger Pangs</div>
+      <div class="pieceLink pieceLink-poetry" id="p6">Mirror Writing</div>
+      <div class="pieceLink pieceLink-poetry" id="p6">Often Times</div>
+      <div class="pieceLink pieceLink-poetry" id="p7">One Track Life</div>
+      <div class="pieceLink pieceLink-poetry" id="p8">Someday</div>
+      <div class="pieceLink pieceLink-poetry" id="p9">So Soon I'll Retire</div>
+      <div class="pieceLink pieceLink-poetry" id="p10">
+        Standing at the Corner
+      </div>
+      <div class="pieceLink pieceLink-poetry" id="p11">
+        The Alientated Voice from Within
+      </div>
+      <div class="pieceLink pieceLink-poetry" id="p12">The Cage</div>
+      <div class="pieceLink pieceLink-poetry" id="p13">
+        The Day that Came and Went
+      </div>
+      <div class="pieceLink pieceLink-poetry" id="p14">The Melancholic Man</div>
+      <div class="pieceLink pieceLink-poetry" id="p15">The Problem</div>
+      <div class="pieceLink pieceLink-poetry" id="p16">The Swell</div>
+      <div class="pieceLink pieceLink-poetry" id="p17">To Dedicate</div>
+      <div class="pieceLink pieceLink-poetry" id="p18">Traps in My Mind</div>
+      <div class="pieceLink pieceLink-poetry" id="p19">What About Me?</div>
+      <div class="pieceLink pieceLink-poetry" id="p20">Whisking Away</div>
+      <div class="pieceLink pieceLink-poetry" id="p21">
+        Who Turned Out the Lights
+      </div>
+    </div>
+  </div>
+  <div class="toc-pieceDisplay">
+    <h4 class="pieceDisplay-header">So Soon I'll Retire</h4>
+    <p class="pieceDisplay-text">
+      I'm nearly there, so soon I'll be hired. And then onto what's next, just
+      waiting to retire. My network is full, my prospects so bright And yet I
+      still sit here just longing to write. Or maybe it's to soar, to play, to
+      live, then die. What if I'm being told, or sold, one simple lie? So
+      melodramatic, yes, I certainly need to stop. Plus I have work in the
+      morning, shift one till shift drop. It's been nearly ten, twenty, thirty
+      years now And I feel I've lost all I'd hoped I'd found. But still
+      something waits there, so deep, this fire. I simply can't wait, for so
+      soon I'll retire.
+    </p>
+    <a href="#" class="pieceDisplay-link">Go to Page</a>
+    <div class="pieceDisplay-btn">Random Poem</div>
+  </div>
+</div>
 
   </div>
 </section>
