First full cut of TOC -- no mobile responsivness

--- a/index.html
+++ b/index.html
@@ -451,7 +451,7 @@
   <div class="toc-pieceLinks">
     <!--! FICTION -->
     <!--! FICTION -->
-<div class="toc-pieceLinks--fiction" id="toc-fictionDisplay">
+<div class="toc-pieceLinks--fiction pointerEvents-none" id="toc-fictionDisplay">
   <a href="#" class="pieceLink pieceLink-fiction" id="f1">
     Mirror In the Mirror
   </a>
@@ -469,7 +469,10 @@
 
     <!--! CHAPTERS -->
     <!--! CHAPTERS -->
-<div class="toc-pieceLinks--chapters" id="toc-chaptersDisplay">
+<div
+  class="toc-pieceLinks--chapters pointerEvents-none"
+  id="toc-chaptersDisplay"
+>
   <a href="chapterPrologue.html" class="pieceLink pieceLink-chapter" id="c0">
     Prologue: A Meeting
   </a>
@@ -514,7 +517,7 @@
 
     <!--! Nonfiction LF -->
     <!--! Longform Nonfiction -->
-<div class="toc-pieceLinks--LF" id="toc-LFDisplay">
+<div class="toc-pieceLinks--LF pointerEvents-none" id="toc-LFDisplay">
   <div class="toc-set1--LF">
     <h3 class="header-LF">The Essays</h3>
     <a href="#" class="pieceLink pieceLink-LF" id="lf1">
@@ -545,7 +548,7 @@
 
     <!--! Nonfiction SF -->
     <!--! Shortform Nonfiction -->
-<div class="toc-pieceLinks--SF" id="toc-SFDisplay">
+<div class="toc-pieceLinks--SF pointerEvents-none" id="toc-SFDisplay">
   <a href="#" class="pieceLink pieceLink-SF" id="sf1">
     The Reasons I Can't Find
   </a>
@@ -644,7 +647,10 @@
 
     <!--! Aphorisms  -->
     <!--! Aphorisms -->
-<div class="toc-pieceLinks--aphorisms" id="toc-aphorismsDisplay">
+<div
+  class="toc-pieceLinks--aphorisms pointerEvents-none"
+  id="toc-aphorismsDisplay"
+>
   <div class="toc-miniContainer">
     <div class="miniContainer-header">Aphorism List</div>
     <div class="pieceLink pieceLink-aphorism" id="a1">A Drop In the Ocean</div>
@@ -697,42 +703,40 @@
 
     <!--! Poetry -->
     <!--! Poetry -->
-<div class="toc-pieceLinks--poetry" id="toc-poetryDisplay">
-  <div class="toc-miniContainer2">
+<div class="toc-pieceLinks--poetry pointerEvents-none" id="toc-poetryDisplay">
+  <div class="toc-miniContainer">
     <div class="miniContainer-header">Poem List</div>
-    <div class="toc-miniContainer">
-      <div class="pieceLink pieceLink-poetry" id="p1">5:21</div>
-      <div class="pieceLink pieceLink-poetry" id="p2">A Drug for Humans</div>
-      <div class="pieceLink pieceLink-poetry" id="p3">DOCTYPE! Soulscape</div>
-      <div class="pieceLink pieceLink-poetry" id="p4">
-        How Can He Deny My Premises
-      </div>
-      <div class="pieceLink pieceLink-poetry" id="p5">Hunger Pangs</div>
-      <div class="pieceLink pieceLink-poetry" id="p6">Mirror Writing</div>
-      <div class="pieceLink pieceLink-poetry" id="p6">Often Times</div>
-      <div class="pieceLink pieceLink-poetry" id="p7">One Track Life</div>
-      <div class="pieceLink pieceLink-poetry" id="p8">Someday</div>
-      <div class="pieceLink pieceLink-poetry" id="p9">So Soon I'll Retire</div>
-      <div class="pieceLink pieceLink-poetry" id="p10">
-        Standing at the Corner
-      </div>
-      <div class="pieceLink pieceLink-poetry" id="p11">
-        The Alientated Voice from Within
-      </div>
-      <div class="pieceLink pieceLink-poetry" id="p12">The Cage</div>
-      <div class="pieceLink pieceLink-poetry" id="p13">
-        The Day that Came and Went
-      </div>
-      <div class="pieceLink pieceLink-poetry" id="p14">The Melancholic Man</div>
-      <div class="pieceLink pieceLink-poetry" id="p15">The Problem</div>
-      <div class="pieceLink pieceLink-poetry" id="p16">The Swell</div>
-      <div class="pieceLink pieceLink-poetry" id="p17">To Dedicate</div>
-      <div class="pieceLink pieceLink-poetry" id="p18">Traps in My Mind</div>
-      <div class="pieceLink pieceLink-poetry" id="p19">What About Me?</div>
-      <div class="pieceLink pieceLink-poetry" id="p20">Whisking Away</div>
-      <div class="pieceLink pieceLink-poetry" id="p21">
-        Who Turned Out the Lights
-      </div>
+    <div class="pieceLink pieceLink-poetry" id="p1">5:21</div>
+    <div class="pieceLink pieceLink-poetry" id="p2">A Drug for Humans</div>
+    <div class="pieceLink pieceLink-poetry" id="p3">DOCTYPE! Soulscape</div>
+    <div class="pieceLink pieceLink-poetry" id="p4">
+      How Can He Deny My Premises
+    </div>
+    <div class="pieceLink pieceLink-poetry" id="p5">Hunger Pangs</div>
+    <div class="pieceLink pieceLink-poetry" id="p6">Mirror Writing</div>
+    <div class="pieceLink pieceLink-poetry" id="p6">Often Times</div>
+    <div class="pieceLink pieceLink-poetry" id="p7">One Track Life</div>
+    <div class="pieceLink pieceLink-poetry" id="p8">Someday</div>
+    <div class="pieceLink pieceLink-poetry" id="p9">So Soon I'll Retire</div>
+    <div class="pieceLink pieceLink-poetry" id="p10">
+      Standing at the Corner
+    </div>
+    <div class="pieceLink pieceLink-poetry" id="p11">
+      The Alientated Voice from Within
+    </div>
+    <div class="pieceLink pieceLink-poetry" id="p12">The Cage</div>
+    <div class="pieceLink pieceLink-poetry" id="p13">
+      The Day that Came and Went
+    </div>
+    <div class="pieceLink pieceLink-poetry" id="p14">The Melancholic Man</div>
+    <div class="pieceLink pieceLink-poetry" id="p15">The Problem</div>
+    <div class="pieceLink pieceLink-poetry" id="p16">The Swell</div>
+    <div class="pieceLink pieceLink-poetry" id="p17">To Dedicate</div>
+    <div class="pieceLink pieceLink-poetry" id="p18">Traps in My Mind</div>
+    <div class="pieceLink pieceLink-poetry" id="p19">What About Me?</div>
+    <div class="pieceLink pieceLink-poetry" id="p20">Whisking Away</div>
+    <div class="pieceLink pieceLink-poetry" id="p21">
+      Who Turned Out the Lights
     </div>
   </div>
   <div class="toc-pieceDisplay">
