Adding in poems and aphorisms text

--- a/index.html
+++ b/index.html
@@ -647,10 +647,7 @@
 
     <!--! Aphorisms  -->
     <!--! Aphorisms -->
-<div
-  class="toc-pieceLinks--aphorisms pointerEvents-none"
-  id="toc-aphorismsDisplay"
->
+<div class="toc-pieceLinks--aphorisms" id="toc-aphorismsDisplay">
   <div class="toc-miniContainer">
     <div class="miniContainer-header">Aphorism List</div>
     <div class="pieceLink pieceLink-aphorism" id="a1">A Drop In the Ocean</div>
@@ -659,46 +656,38 @@
     <div class="pieceLink pieceLink-aphorism" id="a4">CREATE</div>
     <div class="pieceLink pieceLink-aphorism" id="a5">City - Part 1</div>
     <div class="pieceLink pieceLink-aphorism" id="a6">City - Part 2</div>
-    <div class="pieceLink pieceLink-aphorism" id="a6">Epilogue</div>
-    <div class="pieceLink pieceLink-aphorism" id="a7">Existential Dread</div>
-    <div class="pieceLink pieceLink-aphorism" id="a8">Heidegger's Dashes</div>
-    <div class="pieceLink pieceLink-aphorism" id="a9">I am a Fraud</div>
-    <div class="pieceLink pieceLink-aphorism" id="a10">Impact</div>
-    <div class="pieceLink pieceLink-aphorism" id="a11">Lost in My Head</div>
-    <div class="pieceLink pieceLink-aphorism" id="a12">
+    <div class="pieceLink pieceLink-aphorism" id="a7">Epilogue</div>
+    <div class="pieceLink pieceLink-aphorism" id="a8">Existential Dread</div>
+    <div class="pieceLink pieceLink-aphorism" id="a9">Heidegger's Dashes</div>
+    <div class="pieceLink pieceLink-aphorism" id="a10">I am a Fraud</div>
+    <div class="pieceLink pieceLink-aphorism" id="a11">Impact</div>
+    <div class="pieceLink pieceLink-aphorism" id="a12">Lost in My Head</div>
+    <div class="pieceLink pieceLink-aphorism" id="a13">
       Maxa Millennial Creating
     </div>
-    <div class="pieceLink pieceLink-aphorism" id="a13">
+    <div class="pieceLink pieceLink-aphorism" id="a14">
       Maxa the Overcreator
     </div>
-    <div class="pieceLink pieceLink-aphorism" id="a14">MaxaMillennial.org</div>
-    <div class="pieceLink pieceLink-aphorism" id="a15">Moments of Validity</div>
-    <div class="pieceLink pieceLink-aphorism" id="a16">My-being Mask</div>
-    <div class="pieceLink pieceLink-aphorism" id="a17">
+    <div class="pieceLink pieceLink-aphorism" id="a15">MaxaMillennial.org</div>
+    <div class="pieceLink pieceLink-aphorism" id="a16">Moments of Validity</div>
+    <div class="pieceLink pieceLink-aphorism" id="a17">My-being Mask</div>
+    <div class="pieceLink pieceLink-aphorism" id="a18">
       Pillars of Consciousness
     </div>
-    <div class="pieceLink pieceLink-aphorism" id="a18">Real-world Friends</div>
-    <div class="pieceLink pieceLink-aphorism" id="a19">
+    <div class="pieceLink pieceLink-aphorism" id="a19">Real-world Friends</div>
+    <div class="pieceLink pieceLink-aphorism" id="a20">
       Surveying My Soulscape
     </div>
-    <div class="pieceLink pieceLink-aphorism" id="a20">The Absurd</div>
-    <div class="pieceLink pieceLink-aphorism" id="a21">The After-life</div>
-    <div class="pieceLink pieceLink-aphorism" id="a22">
+    <div class="pieceLink pieceLink-aphorism" id="a21">The Absurd</div>
+    <div class="pieceLink pieceLink-aphorism" id="a22">The After-life</div>
+    <div class="pieceLink pieceLink-aphorism" id="a23">
       The Backhanded Jaywalk
     </div>
-    <div class="pieceLink pieceLink-aphorism" id="a23">
+    <div class="pieceLink pieceLink-aphorism" id="a24">
       You Look So Different
     </div>
   </div>
-  <div class="toc-pieceDisplay">
-    <h4 class="pieceDisplay-header">Charity Work</h4>
-    <p class="pieceDisplay-text">
-      I will never donate anonymously. Never ever. I'll donate everything I own
-      but never anonymously.
-    </p>
-    <a href="#" class="pieceDisplay-link">Go to Page</a>
-    <div class="pieceDisplay-btn">Random Aphorism</div>
-  </div>
+  <div class="toc-pieceDisplay" id="aphorismTextAndTitle"></div>
 </div>
 
     <!--! Poetry -->
@@ -714,46 +703,36 @@
     </div>
     <div class="pieceLink pieceLink-poetry" id="p5">Hunger Pangs</div>
     <div class="pieceLink pieceLink-poetry" id="p6">Mirror Writing</div>
-    <div class="pieceLink pieceLink-poetry" id="p6">Often Times</div>
-    <div class="pieceLink pieceLink-poetry" id="p7">One Track Life</div>
-    <div class="pieceLink pieceLink-poetry" id="p8">Someday</div>
-    <div class="pieceLink pieceLink-poetry" id="p9">So Soon I'll Retire</div>
-    <div class="pieceLink pieceLink-poetry" id="p10">
+    <div class="pieceLink pieceLink-poetry" id="p7">Often Times</div>
+    <div class="pieceLink pieceLink-poetry" id="p8">One Track Life</div>
+    <div class="pieceLink pieceLink-poetry" id="p9">Someday</div>
+    <div class="pieceLink pieceLink-poetry" id="p10">So Soon I'll Retire</div>
+    <div class="pieceLink pieceLink-poetry" id="p11">
       Standing at the Corner
     </div>
-    <div class="pieceLink pieceLink-poetry" id="p11">
+    <div class="pieceLink pieceLink-poetry" id="p12">
       The Alientated Voice from Within
     </div>
-    <div class="pieceLink pieceLink-poetry" id="p12">The Cage</div>
-    <div class="pieceLink pieceLink-poetry" id="p13">
+    <div class="pieceLink pieceLink-poetry" id="p13">The Cage</div>
+    <div class="pieceLink pieceLink-poetry" id="p14">
       The Day that Came and Went
     </div>
-    <div class="pieceLink pieceLink-poetry" id="p14">The Melancholic Man</div>
-    <div class="pieceLink pieceLink-poetry" id="p15">The Problem</div>
-    <div class="pieceLink pieceLink-poetry" id="p16">The Swell</div>
-    <div class="pieceLink pieceLink-poetry" id="p17">To Dedicate</div>
-    <div class="pieceLink pieceLink-poetry" id="p18">Traps in My Mind</div>
-    <div class="pieceLink pieceLink-poetry" id="p19">What About Me?</div>
-    <div class="pieceLink pieceLink-poetry" id="p20">Whisking Away</div>
-    <div class="pieceLink pieceLink-poetry" id="p21">
+    <div class="pieceLink pieceLink-poetry" id="p15">The Melancholic Man</div>
+    <div class="pieceLink pieceLink-poetry" id="p16">The Problem</div>
+    <div class="pieceLink pieceLink-poetry" id="p17">The Swell</div>
+    <div class="pieceLink pieceLink-poetry" id="p18">To Dedicate</div>
+    <div class="pieceLink pieceLink-poetry" id="p19">Traps in My Mind</div>
+    <div class="pieceLink pieceLink-poetry" id="p20">What About Me?</div>
+    <div class="pieceLink pieceLink-poetry" id="p21">Whisking Away</div>
+    <div class="pieceLink pieceLink-poetry" id="p22">
+      Who Turned Out the Lights
+    </div>
+    <div class="pieceLink pieceLink-poetry" id="p23">
       Who Turned Out the Lights
     </div>
   </div>
-  <div class="toc-pieceDisplay">
-    <h4 class="pieceDisplay-header">So Soon I'll Retire</h4>
-    <p class="pieceDisplay-text">
-      I'm nearly there, so soon I'll be hired. And then onto what's next, just
-      waiting to retire. My network is full, my prospects so bright And yet I
-      still sit here just longing to write. Or maybe it's to soar, to play, to
-      live, then die. What if I'm being told, or sold, one simple lie? So
-      melodramatic, yes, I certainly need to stop. Plus I have work in the
-      morning, shift one till shift drop. It's been nearly ten, twenty, thirty
-      years now And I feel I've lost all I'd hoped I'd found. But still
-      something waits there, so deep, this fire. I simply can't wait, for so
-      soon I'll retire.
-    </p>
-    <a href="#" class="pieceDisplay-link">Go to Page</a>
-    <div class="pieceDisplay-btn">Random Poem</div>
+  <div class="toc-pieceDisplay" id="poemTextAndTitle">
+    <div class="test"></div>
   </div>
 </div>
 
@@ -767,5 +746,7 @@
     <script src="topNav.js"></script>
     <script src="smoothScroll.js"></script>
     <script src="toc.js"></script>
+    <script src="poems.js"></script>
+    <script src="aphorisms.js"></script>
     <script src="mediaQueries.js"></script>
 </html>
