--- a/pages/index.html
+++ b/pages/index.html
@@ -11,10 +11,10 @@
 {% block content %}
 
 <!-- Partial 1 NJK-->
-{% include "partials/nav.html" %}
+{% include "partials/nav/nav.html" %}
 
 <!-- Partial 2 NJK-->
-{% include "partials/toc.html" %}
+{% include "partials/toc/toc.html" %}
 
 <!-- Endblock -->
 {% endblock %}
