Added all longform nonfiction pages and fiction pages with no text. Added nav links as well

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
              
 <title>Table of Contents</title>
-  
+                   
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
@@ -110,19 +110,19 @@
     <!------------ FICTION ------------>
 <div class="subNav pointerEvents-none" id="list-shortStories">
   <h2 class="subNav-header">Fiction - coming soon</h2>
-  <a href="#" class="subNav-link">
+  <a href="mirrorInTheMirror.html" class="subNav-link">
     <p class="subNav-link--text">1. Mirror In the Mirror</p>
   </a>
-  <a href="#" class="subNav-link">
+  <a href="aChairToNowhere.html" class="subNav-link">
     <div class="subNav-link--text">2. A Chair to Nowhere</div>
   </a>
-  <a href="#" class="subNav-link">
+  <a href="aBishopsWatchdog.html" class="subNav-link">
     <div class="subNav-link--text">3. A Bishop's Watchdog</div>
   </a>
-  <a href="#" class="subNav-link">
+  <a href="theDoctorsApprentice.html" class="subNav-link">
     <div class="subNav-link--text">4. The Doctor's Apprentice</div>
   </a>
-  <a href="#" class="subNav-link">
+  <a href="politiciansofthefuture.html" class="subNav-link">
     <div class="subNav-link--text">5. Politicians of the Future</div>
   </a>
 </div>
@@ -138,34 +138,43 @@
     <!------------ LONGFORM NONFICTION ------------>
 <div class="subNav pointerEvents-none" id="list-nonfiction-long">
   <h2 class="subNav-header">Longform Non-fiction - coming soon</h2>
-  <a href="#" class="subNav-link">
+  <a href="anEssayConcerningYou.html" class="subNav-link">
     <p class="subNav-link--text">1. An Essay Concerning You</p>
   </a>
-  <a href="#" class="subNav-link">
+  <a href="aTheoryOfAcknowledgement.html" class="subNav-link">
     <p class="subNav-link--text">2. A Theory of Acknowledgement</p>
   </a>
-  <a href="#" class="subNav-link">
+  <a href="" class="subNav-link">
     <p class="subNav-link--text">3. An Addict, a Thief, and a Catalogger</p>
   </a>
-  <a href="#" class="subNav-link">
+  <a href="theMeeting.html" class="subNav-link">
+    <p class="subNav-link--text">The Meeting</p>
+  </a>
+  <a href="anAddictsDesperation.html" class="subNav-link">
+    <p class="subNav-link--text">An Addict's Desperation</p>
+  </a>
+  <a href="theTimeIMetRachelBloom.html" class="subNav-link">
+    <p class="subNav-link--text">The Time I Met Rachel Bloom</p>
+  </a>
+  <a href="aStrangersStranger.html" class="subNav-link">
     <p class="subNav-link--text">4. A Stranger's Stranger</p>
   </a>
-  <a href="#" class="subNav-link">
+  <a href="kingsSoConquered.html" class="subNav-link">
     <p class="subNav-link--text">5. Kings So Conquered</p>
   </a>
-  <a href="#" class="subNav-link">
+  <a href="anExistentialCritiqueOfCapitalism.html" class="subNav-link">
     <p class="subNav-link--text">6. An Existential Critique of Capitalism</p>
   </a>
-  <a href="#" class="subNav-link">
+  <a href="assumptiveCritiques.html" class="subNav-link">
     <p class="subNav-link--text">7. Assumptive Critiques</p>
   </a>
-  <a href="#" class="subNav-link">
+  <a href="theSonderer.html" class="subNav-link">
     <p class="subNav-link--text">8. The Sonderer</p>
   </a>
-  <a href="#" class="subNav-link">
+  <a href="theWatchers.html" class="subNav-link">
     <p class="subNav-link--text">9. The Watchers</p>
   </a>
-  <a href="#" class="subNav-link">
+  <a href="severed.html" class="subNav-link">
     <p class="subNav-link--text">10. Severed</p>
   </a>
 </div>
@@ -452,17 +461,27 @@
     <!--! FICTION -->
     <!--! FICTION -->
 <div class="toc-pieceLinks--fiction pointerEvents-none" id="toc-fictionDisplay">
-  <a href="#" class="pieceLink pieceLink-fiction" id="f1">
+  <a href="mirrorInTheMirror.html" class="pieceLink pieceLink-fiction" id="f1">
     Mirror In the Mirror
   </a>
-  <a href="#" class="pieceLink pieceLink-fiction" id="f2">A Chair to Nowhere</a>
-  <a href="#" class="pieceLink pieceLink-fiction" id="f3">
+  <a href="aChairToNowhere.html" class="pieceLink pieceLink-fiction" id="f2">
+    A Chair to Nowhere
+  </a>
+  <a href="aBishopsWatchdog.html" class="pieceLink pieceLink-fiction" id="f3">
     A Bishop's Watchdog
   </a>
-  <a href="#" class="pieceLink pieceLink-fiction" id="f4">
+  <a
+    href="theDoctorsApprentice.html"
+    class="pieceLink pieceLink-fiction"
+    id="f4"
+  >
     The Doctor's Apprentice
   </a>
-  <a href="#" class="pieceLink pieceLink-fiction" id="f5">
+  <a
+    href="politiciansofthefuture.html"
+    class="pieceLink pieceLink-fiction"
+    id="f5"
+  >
     Politicians of the Future
   </a>
 </div>
@@ -520,29 +539,58 @@
 <div class="toc-pieceLinks--LF pointerEvents-none" id="toc-LFDisplay">
   <div class="toc-set1--LF">
     <h3 class="header-LF">The Essays</h3>
-    <a href="#" class="pieceLink pieceLink-LF" id="lf1">
+    <a href="anEssayConcerningYou.html" class="pieceLink pieceLink-LF" id="lf1">
       An Essay Concerning You
     </a>
-    <a href="#" class="pieceLink pieceLink-LF" id="lf2">
+    <a
+      href="aTheoryOfAcknowledgement.html"
+      class="pieceLink pieceLink-LF"
+      id="lf2"
+    >
       A Theory of Acknowledgement
     </a>
-    <a href="#" class="pieceLink pieceLink-LF" id="lf3">
+    <a
+      href="anExistentialCritiqueOfCapitalism.html"
+      class="pieceLink pieceLink-LF"
+      id="lf3"
+    >
       An Existential Critique of Capitalism
     </a>
-    <a href="#" class="pieceLink pieceLink-LF" id="lf4">Assumptive Critiques</a>
+    <a href="assumptiveCritiques.html" class="pieceLink pieceLink-LF" id="lf4">
+      Assumptive Critiques
+    </a>
   </div>
   <div class="toc-set2--LF">
     <h3 class="header-LF">The Witness</h3>
-    <a href="#" class="pieceLink pieceLink-LF" id="lf5">
+    <a href=".html" class="pieceLink pieceLink-LF" id="lf5">
       An Addict, a Thief, and a Catalogger
     </a>
-    <a href="#" class="pieceLink pieceLink-LF" id="lf6">
+    <a href="theMeeting.html" class="pieceLink pieceLink-LF" id="lf7">
+      The Meeting
+    </a>
+    <a href="anAddictsDesperation.html" class="pieceLink pieceLink-LF" id="lf7">
+      An Addicts Desperation
+    </a>
+    <a
+      href="theTimeIMetRachelBloom.html"
+      class="pieceLink pieceLink-LF"
+      id="lf7"
+    >
+      The Time I Met Rachel Bloom
+    </a>
+    <a href="aStrangersStranger.html" class="pieceLink pieceLink-LF" id="lf6">
       A Stranger's Stranger
     </a>
-    <a href="#" class="pieceLink pieceLink-LF" id="lf7">Kings So Conquered</a>
-    <a href="#" class="pieceLink pieceLink-LF" id="lf8">The Sonderer</a>
-    <a href="#" class="pieceLink pieceLink-LF" id="lf9">The Watchers</a>
-    <a href="#" class="pieceLink pieceLink-LF" id="lf10">Severed</a>
+    <a href="kingsSoConquered.html" class="pieceLink pieceLink-LF" id="lf7">
+      Kings So Conquered
+    </a>
+    <a href="theSonderer.html" class="pieceLink pieceLink-LF" id="lf8">
+      The Sonderer
+    </a>
+    <a href="theWatchers.html" class="pieceLink pieceLink-LF" id="lf9">
+      The Watchers
+    </a>
+    <a href="severed.html" class="pieceLink pieceLink-LF" id="lf10">Severed</a>
   </div>
 </div>
 
